[gd_scene load_steps=3 format=3 uid="uid://bx8y6z1a9c2d4"]

[ext_resource type="Script" path="res://scripts/RoomListScreen.gd" id="1_room_list"]
[ext_resource type="Texture2D" uid="uid://bngftk4n3k3xr" path="res://assets/backgrounds/room_list_bg.png" id="2_bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.3, 0.4, 0.7, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_left = 10
corner_radius_bottom_right = 10
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.6, 0.9, 1.0)

[node name="RoomListScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_room_list")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 5

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 120.0
offset_right = -80.0
offset_bottom = -80.0

[node name="TopBar" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 60)

[node name="Spacer" type="Control" parent="MainContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="MainContainer/TopBar"]
layout_mode = 2
text = "关闭"
custom_minimum_size = Vector2(80, 60)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="RoomScrollContainer" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="RoomList" type="VBoxContainer" parent="MainContainer/RoomScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomBar" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 60)

[node name="RefreshButton" type="Button" parent="MainContainer/BottomBar"]
layout_mode = 2
text = "刷新"
custom_minimum_size = Vector2(100, 60)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="Spacer2" type="Control" parent="MainContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MainContainer/TopBar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MainContainer/BottomBar/RefreshButton" to="." method="_on_refresh_button_pressed"]